修复抽屉的bug